<resources>
    <string name="app_name">"Morse Free"</string>
    <string name="select_mode">"Select mode"</string>
    <string name="learn_transmit">"Learn transmit"</string>
    <string name="learn_receive">"Learn receive"</string>
    <string name="receive">"Receive"</string>
    <string name="transmit">"Transmit"</string>
    <string name="select_lesson">"Select lesson"</string>
    <string name="unit_1">"Unit 1"</string>
    <string name="unit_2">"Unit 2"</string>
    <string name="unit_3">"Unit 3"</string>
    <string name="unit_4">"Unit 4"</string>
    <string name="unit_5">"Unit 5"</string>
    <string name="unit_6">"Unit 6"</string>
    <string name="latin_e_and_t">"E and T"</string>
    <string name="latin_i_and_m">"I and M"</string>
    <string name="latin_a_and_n">"A and N"</string>
    <string name="latin_s_and_o">"S and O"</string>
    <string name="latin_u_and_g">"U and G"</string>
    <string name="latin_r_and_k">"R and K"</string>
    <string name="latin_w_and_d">"W and D"</string>
    <string name="latin_h_and_sh">"H"</string>
    <string name="latin_v_and_ch">"V"</string>
    <string name="latin_f_and_q">"F and Q"</string>
    <string name="latin_yu_and_z">"Z"</string>
    <string name="latin_l_and_y">"L and Y"</string>
    <string name="latin_ya_and_c">"C"</string>
    <string name="latin_p_and_x">"P and X"</string>
    <string name="latin_j_and_b">"J and B"</string>
    <string name="cyrillic_e_and_t">"Е and Т"</string>
    <string name="cyrillic_i_and_m">"И and М"</string>
    <string name="cyrillic_a_and_n">"А and Н"</string>
    <string name="cyrillic_s_and_o">"С and О"</string>
    <string name="cyrillic_u_and_g">"У and Г"</string>
    <string name="cyrillic_r_and_k">"Р and К"</string>
    <string name="cyrillic_w_and_d">"В and Д"</string>
    <string name="cyrillic_h_and_sh">"Х and Ш"</string>
    <string name="cyrillic_v_and_ch">"Ж and Ч"</string>
    <string name="cyrillic_f_and_q">"Ф and Щ"</string>
    <string name="cyrillic_yu_and_z">"Ю and З"</string>
    <string name="cyrillic_l_and_y">"Л and Ы"</string>
    <string name="cyrillic_ya_and_c">"Я and Ц"</string>
    <string name="cyrillic_p_and_x">"П and Ь"</string>
    <string name="cyrillic_j_and_b">"Й and Б"</string>
    <string name="number_1_and_6">"1 and 6"</string>
    <string name="number_2_and_7">"2 and 7"</string>
    <string name="number_3_and_8">"3 and 8"</string>
    <string name="number_4_and_9">"4 and 9"</string>
    <string name="number_5_and_0">"5 and 0"</string>
    <string name="symbol_open_bracket_and_close_bracket">"( and )"</string>
    <string name="symbol_point_and_comma">". and ,"</string>
    <string name="symbol_semicolon_and_colon">"; and :"</string>
    <string name="symbol_quotes_and_apostrophe">"\&quot; and \'"</string>
    <string name="symbol_dash_and_slash">"- and \/"</string>
    <string name="symbol_question_mark_and_exclamation_mark">"\? and \!"</string>
    <string name="symbol_at">"\@"</string>
    <string name="transmit_level">"Transmit level"</string>
    <string name="receive_level">"Receive level"</string>
    <string name="label_level">"Label level"</string>
    <string name="help">"Help"</string>
    <string name="repeat">"Repeat"</string>
    <string name="invalid">"Invalid"</string>
    <string name="sentence">"Sentence"</string>
    <string name="user_sentence">"User sentence"</string>
    <string name="all">"All"</string>
    <string name="clue">"Clue"</string>
    <string name="back">"Back"</string>
    <string name="repetition">"Repetition"</string>
    <string name="clear">"Clear"</string>
    <string name="start">"Start"</string>
    <string name="again">"Again"</string>
    <string name="change">"Change"</string>
</resources>