<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/root_layout"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="48sp"
        android:text="@string/select_mode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/modes"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="MissingConstraints"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="4"
        android:id="@+id/modes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.5"
        tools:ignore="MissingConstraints">
        <Button
            android:id="@+id/learn_transmit_mode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/learn_transmit"
            android:layout_margin="4dp"/>
        <Button
            android:id="@+id/learn_receive_mode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/learn_receive"
            android:layout_margin="4dp"/>
        <Button
            android:id="@+id/transmit_mode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/transmit"
            android:layout_margin="4dp"/>
        <Button
            android:id="@+id/receive_mode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/receive"
            android:layout_margin="4dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>